# mai-media-manager

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Mai.code-workspace  Mai.wpr  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  utils.py
backend/: server.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
frontend/: flet_ui.py
src/mai/: __init__.py  main.py  utils.py
src/mai_media_manager/: __init__.py
tests/test_example/: test_some_function.py
